# AI-Hub-SharePoint-Project

./: .gitignore  Makefile  README.md  pyproject.toml  workflow_settings.yaml
.devcontainer/: devcontainer.json  setup-ssh.sh
agent/: agent.py  auxiliars.py  config.py  credentials.py  mcp_config.json
agent/prompts/: page_generator.txt
agent/templates/: page_schema.json
agent/tools/: __init__.py  cloud_storage.py  config.py  gcs_tools.py  image_generation.py  text_to_speech.py  tool_schemas.py  video_generation.py
agent/tools/audio/: __init__.py  audio_data.py  config.py  schemas.py  text_to_speech.py
agent/tools/gcp/: bigquery.py  cloud_storage.py  config.py  schemas.py
agent/tools/image/: __init__.py  config.py  image_generation.py  schemas.py
agent/tools/video/: __init__.py  config.py  schemas.py  video_generation.py
agent/utils/azure/: key_vaults.py
ai_events_pipeline/: ai_events_pipeline.py  ai_events_pipeline_steps.py  config.py  events_auxiliars.py
ai_news_pipeline/: README.md  ai_news_pipeline.py  ai_news_pipeline_steps.py  config.py  news_auxiliars.py
ai_news_pipeline/extractors/: README.md  image_url_extractors.py
ai_news_pipeline/selectors/: extractor_selector.py
database/: schemas.py
database/tables/: __init__.py  base.py
dataform/definitions/: calendar.sqlx  daily_news_report.sqlx  news_metadata.sqlx
definitions/outputs/: daily_news_report.sqlx
definitions/sources/: news_metadata.sqlx
news_extraction_pipeline/: README.md  config.py  news_extraction_pipeline.dockerfile  pipeline.py  pipeline_steps.py  schemas.py
news_extraction_pipeline/app/: main.py  models.py
news_extraction_pipeline/extractor_selectors/: README.md
news_extraction_pipeline/selectors/: README.md  extractor_selector.py
notebooks/: agent_brain.ipynb  ai_events_etl.ipynb  ai_news_extraction.ipynb  extractor_selectors.ipynb  image_extractor_selectors.ipynb  image_extractors.ipynb  news_extraction_pipeline.ipynb  news_extraction_pipeline_api.ipynb  news_extractors.ipynb  pydantic_ai_agents.ipynb  text_to_speech.ipynb  video_creation.ipynb
terraform/: README.md  backend.tf  main.tf  providers.tf  vars.tf
tests/: test_schemas.py
utils/: io_utils.py
utils/gcp/: bigquery.py  gcs.py
web_scrappers/: base.py
web_scrappers/NewsScrappers/: news_base.py
(+11 files in other folders)
