[project]
name = "ai-hub-sharepoint-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
ai-agent = [
    "openai>=2.0.0",
]
ai-news-automation = [
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
azure-libraries = [
    "azure-functions>=1.23.0",
    "azure-identity>=1.25.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-storage-blob>=12.26.0",
]
dev = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
]
notebooks = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
]
